--- a/package.json
+++ b/package.json
@@ -15,6 +15,31 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "jquery": "^3.4.0",
-    "popper.js": "^1.15.0"
+    "popper.js": "^1.15.0",
+    "canvas-designer": "^1.3.0",
+    "detectrtc": "^1.3.9",
+    "fbr": "^2.0.8",
+    "getstats": "^1.2.0",
+    "ims-lti": "^3.0.2",
+    "multistreamsmixer": "^1.0.8",
+    "recordrtc": "^5.5.4",
+    "rtcmulticonnection-server": "^1.3.1",
+    "socket.io": "^2.2.0",
+    "webpack": "^4.29.6",
+    "webrtc-adapter": "^7.2.1",
+    "webrtc-screen-capturing": "^1.0.1"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.4",
+    "grunt-bump": "^0.8.0",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-uglify": "^4.0.1",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-jsbeautifier": "^0.2.13",
+    "grunt-replace": "^1.0.1",
+    "load-grunt-tasks": "^4.0.0"
   }
 }
