--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "luatvc",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.2.32",
+    "angular-route": "^1.2.32",
     "bootstrap": "^4.3.1",
     "canvas-designer": "^1.3.0",
     "detectrtc": "^1.3.9",
